# e-commerce_platform_app

./: .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: ce1917a0cae1_update_schema_for_new_database.py  d724c6f68024_modified_order_schema.py  e3a532486f2b_initial_migration.py
app/: main.py
app/api/: orders.py  products.py
app/db/: db.py  dependencies.py
app/models/: order.py  product.py
app/schemas/: order.py  product.py
app/service/: order_service.py  product_service.py
app/utils/: exceptions.py  logger.py
tests/: test_main.py
tests/integration/: test_integration.py  test_integration_productorder.py
tests/unit/: test_order_unit.py  test_product_unit.py
