[project]
name = "e-commerce-platform-app"
version = "0.1.0"
description = "e-commerce_platform_app"
authors = [
    {name = "nazneenprojects",email = "mulanisnaaz@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
